tests/negative/externs/default_opaque_extern.orng
// default_opaque_extern.orng:8:18: error: no default value for type `C_Int`
//     let mut xs: [5]C_Int
//                 ^
// 
extern ("int") type C_Int

fn main() -> Int {
    let mut xs: [5]C_Int
    xs[3] = 2
    xs[2] = 0xFFFFFFFFFFFFFFF
    xs[3] + 340
}